--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ urchinTracker();
 			<a href="screenshots.en.php" style="color: #0221BD"><b>Screenshots</b></a><br/>
 			<a href="docs.en.php" style="color: #0221BD">
 			<b>Documentation</b></a><br/>
-			<a href="download.en.php" style="color: #0221BD"><b>Download</b></a><br/>
+			<a href="download.en.html" style="color: #0221BD"><b>Download</b></a><br/>
 			<a href="portscanner.en.php" style="color: #0221BD"><b>Port Scanner</b></a> <i><span style="color: yellow; font-weight: bold;">new</span></i><br/>
 			<a href="vulnerabilities.en.php" style="color: #0221BD"><b>Last vulnerabilities</b></a><br/>
 			<a target="_new" href="http://lists.sourceforge.net/lists/listinfo/turtlefirewall-announce" style="color: #0221BD">
