--- a/docs.en.html
+++ b/docs.en.html
@@ -26,28 +26,28 @@ urchinTracker();
 		<tr>
 		<td  style="width: 1%; background-color: #889CFF; background-image: url(images/bg_left.gif);" align="center" valign="top" >
 
-		<a href="index.en.php">
+		<a href="index.en.html">
 		<img src="images/tortuga.png" style="padding-top: 20px; padding-bottom: 20px" alt="Turtle Firewall"/></a>
 
-		<a href="index.en.php"><img src="images/flag-en.png" style="padding-right: 5px" alt="ita"/></a>
-		<a href="index.it.php"><img src="images/flag-it.png" style="padding-left: 5px" alt="eng"/></a>
+		<a href="index.en.html"><img src="images/flag-en.png" style="padding-right: 5px" alt="ita"/></a>
+		<a href="index.it.html"><img src="images/flag-it.png" style="padding-left: 5px" alt="eng"/></a>
 		<br/>
 
 		<table border="0" cellspacing="10" cellpadding="0">
 		<tr><td align="left">
 			<br/>
-			<a href="index.en.php" style="color: #0221BD"><b>Home</b></a><br/>
-			<a href="screenshots.en.php" style="color: #0221BD"><b>Screenshots</b></a><br/>
-			<a href="docs.en.php" style="color: #0221BD">
+			<a href="index.en.html" style="color: #0221BD"><b>Home</b></a><br/>
+			<a href="screenshots.en.html" style="color: #0221BD"><b>Screenshots</b></a><br/>
+			<a href="docs.en.html" style="color: #0221BD">
 			<b>Documentation</b></a><br/>
-			<a href="download.en.php" style="color: #0221BD"><b>Download</b></a><br/>
-			<a href="portscanner.en.php" style="color: #0221BD"><b>Port Scanner</b></a> <i><span style="color: yellow; font-weight: bold;">new</span></i><br/>
-			<a href="vulnerabilities.en.php" style="color: #0221BD"><b>Last vulnerabilities</b></a><br/>
+			<a href="download.en.html" style="color: #0221BD"><b>Download</b></a><br/>
+			<a href="portscanner.en.html" style="color: #0221BD"><b>Port Scanner</b></a> <i><span style="color: yellow; font-weight: bold;">new</span></i><br/>
+			<a href="vulnerabilities.en.html" style="color: #0221BD"><b>Last vulnerabilities</b></a><br/>
 			<a target="_new" href="http://lists.sourceforge.net/lists/listinfo/turtlefirewall-announce" style="color: #0221BD">
 			<b>Newsletter</b></a><br/>
-			<a href="changelog.en.php" style="color: #0221BD"><b>ChangeLog</b></a><br/>
-			<a href="credits.en.php" style="color: #0221BD"><b>Credits</b></a><br/>
-			<!--<a href="commercial.en.php" style="color: #0221BD"><b>Commercial Support</b></a><br/>-->
+			<a href="changelog.en.html" style="color: #0221BD"><b>ChangeLog</b></a><br/>
+			<a href="credits.en.html" style="color: #0221BD"><b>Credits</b></a><br/>
+			<!--<a href="commercial.en.html" style="color: #0221BD"><b>Commercial Support</b></a><br/>-->
 		</td></tr>
 		</table>
 
@@ -74,7 +74,7 @@ urchinTracker();
 		-->
 		<!-- FINE Donattion PayPal -->
 		
-		<? include('textLinkAds.php'); ?>
+		<? include('textLinkAds.html'); ?>
 
 		<br/>
 
@@ -85,7 +85,7 @@ urchinTracker();
 		<br/><br/>
 
 		<!--<a href="http://www.frisoft.it/index_prezzi.shtml">-->
-		<a href="commercial.en.php">
+		<a href="commercial.en.html">
 		<img src="images/assistenza_open.gif" style="padding-top: 10px; padding-bottom: 10px" alt="Assistenza"/></a>
 
 
@@ -188,7 +188,7 @@ google_color_text = "FFFFFF";
 		Italian to English translation by Emanuele Tatti.
 		<br/>
 		<br/>
-		<a href="http://sourceforge.net/projects/turtlefirewall/"><img src="http://sourceforge.net/sflogo.php?group_id=49697" alt="SourceForge Logo"/></a>
+		<a href="http://sourceforge.net/projects/turtlefirewall/"><img src="http://sourceforge.net/sflogo.html?group_id=49697" alt="SourceForge Logo"/></a>
 
 		</td></tr>
 	</table>
