--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ urchinTracker();
 		<input type="hidden" name="tax" value="0">
 
 		<span style="color: #0221BD">
-		
+
 		Support Turtle Firewall project:
 		</span>
 		<br>
@@ -73,8 +73,8 @@ urchinTracker();
 		</form>
 		-->
 		<!-- FINE Donattion PayPal -->
-		
-		<? include('textLinkAds.php'); ?>
+
+		<? include('textLinkAds.html'); ?>
 
 		<br/>
 
@@ -125,8 +125,8 @@ google_color_text = "FFFFFF";
 			<br/><br/>
 
 	<p>
-		
-		
+
+
 		Turtle Firewall is a software which allows you to realize a Linux
 		firewall in a simply and fast way.<br/>
 		It's based on Kernel 2.4.x/2.6.x and Iptables.
@@ -135,15 +135,15 @@ google_color_text = "FFFFFF";
 		want to enable among the different elements or groups of elements.<br/>
 		You can do this simply editing a XML file or using the comfortable web
 		interface <a href="http://www.webmin.com">Webmin</a>.
-		
+
 	</p>
 	<p>
-		
-		
+
+
 		Turtle Firewall is an Open Source project written using the
 		<a href="http://www.perl.com">perl</a> language and realeased under
 		GPL version 2.0 by Andrea Frigido (Frisoft).
-		
+
 	</p>
 	<p>
 		<b>Author:</b>
@@ -242,15 +242,15 @@ New Turtle Firewall 1.19 released!
 	</p>
 	<ul>
 		<li>
-			
+
 			ZONES, NETWORKS, HOSTS and GROUPS definitions.
 		</li>
 		<li>
-			
+
 			Filter rules definitions based on services.
 		</li>
 		<li>
-			
+
 			New services definitions.
 		</li>
 		<li>NAT</li>
@@ -261,28 +261,28 @@ New Turtle Firewall 1.19 released!
 	</p>
 	<ul>
 		<li>
-			
+
 			Perl Interpreter
 		</li>
 		<li>
-			
+
 			expat library (normally included in all distros).
 		</li>
 		<li>
-			
+
 			perl library for expat (XML::Parser).
 		</li>
 		<li><a href="http://www.webmin.com">Webmin</a> (If you want to use the web interface).</li>
 		<li>
-			
+
 			iptables command in PATH.
 		</li>
 		<li>
-			
+
 			Netfilter kernel modules installed or compiled into kernel (ip_tables, ip_conntrack, etc.).
 		</li>
 		<li>
-			
+
 			Forward enabled ("Act as router"=yes in Hardware->Network->Routing webmin form).
 		</li>
 	</ul>
@@ -309,7 +309,7 @@ New Turtle Firewall 1.19 released!
 
 
 	</td>
-	
+
 	<td valign="top" width="120">
 	<br><br><br><br><br><br>
 <script type="text/javascript"><!--
@@ -329,8 +329,8 @@ google_color_text = "FFFFFF";
   src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 	</td>
-	
-	
+
+
 	</tr></table>
 
 	<br/><br/><br/><br/>
@@ -340,11 +340,11 @@ google_color_text = "FFFFFF";
 		<br/>
 		<b>Copyright (c) 2001-2004 Frisoft di Frigido Andrea - P.IVA 03142480247 (<a href="http://www.frisoft.it">www.frisoft.it</a>)</b>
 		<br/>
-		
+
 		Italian to English translation by Emanuele Tatti.
 		<br/>
 		<br/>
-		<a href="http://sourceforge.net/projects/turtlefirewall/"><img src="http://sourceforge.net/sflogo.php?group_id=49697" alt="SourceForge Logo"/></a>
+		<a href="http://sourceforge.net/projects/turtlefirewall/"><img src="http://sourceforge.net/sflogo.html?group_id=49697" alt="SourceForge Logo"/></a>
 
 		</td></tr>
 	</table>
@@ -353,5 +353,3 @@ google_color_text = "FFFFFF";
 
   </body>
 </html>
-
-
