--- a/liberate_il_WIMAX.html
+++ b/liberate_il_WIMAX.html
@@ -19,33 +19,33 @@
 </p>
 <p style="margin-bottom: 0cm;"><b>Introduzione</b></p>
 <p style="margin-bottom: 0cm;">Se siete interessati al Wi-Fi od al
-Wi-MAX, e vedete in queste tecnologie la possibilità di
-portare Internet là dove finora non è potuta arrivare,
+Wi-MAX, e vedete in queste tecnologie la possibilitï¿½ di
+portare Internet lï¿½ dove finora non ï¿½ potuta arrivare,
 allora <b>aiutateci</b>: queste tecnologie stanno per esserci
-scippate dai soliti oligopolisti ed il nostro sogno di libertà
-potrebbe svanire in una nuvola di fumo. Solo a Dicembre 2006 si è 
+scippate dai soliti oligopolisti ed il nostro sogno di libertï¿½
+potrebbe svanire in una nuvola di fumo. Solo a Dicembre 2006 si ï¿½ 
 raggiunto un accordo per liberalizzarle <a href="http://difesa.it/Sala+Stampa/comunicati-stampa-ministro-difesa-dettaglio.htm?DetailiD=1578">(Ministero Difesa)</a>.</p>
 <p style="margin-bottom: 0cm;"><br>
 </p>
 <p style="margin-bottom: 0cm;"><b>Wi-Fi e Wi-MAX come strumento di
-libertà</b></p>
+libertï¿½</b></p>
 <p style="margin-bottom: 0cm;">Fino ad oggi, per collegare un nuovo
-utente ad Internet è sempre stato necessario fare arrivare
+utente ad Internet ï¿½ sempre stato necessario fare arrivare
 fino a casa sua un cavo in rame (come quello del telefono) od in
 fibra ottica. Questo vuol dire che per collegare ad Internet un
 cittadino che abiti lontano dai principali punti di accesso ad
-Internet può essere necessario stendere chilometri di cavo e
+Internet puï¿½ essere necessario stendere chilometri di cavo e
 spendere cifre esorbitanti. Per questo motivo, quasi tutta la
-popolazione italiana che vive lontano dalle grandi città è
+popolazione italiana che vive lontano dalle grandi cittï¿½ ï¿½
 sempre rimasta esclusa da questa tecnologia e da tutti i vantaggi che
 essa comporta (ad esempio l'abbattimento dei costi di comunicazione
 voce che sono resi possibili dall'uso di sistemi VoIP come Skype o
 Gizmo).</p>
 <p style="margin-bottom: 0cm;"><br>
 </p>
-<p style="margin-bottom: 0cm;">La necessità di stendere del
-cavo ha creato dei problemi enormi anche a chi abita in città.
-Dato che stendere nuovi cavi in città comporta dei lavori di
+<p style="margin-bottom: 0cm;">La necessitï¿½ di stendere del
+cavo ha creato dei problemi enormi anche a chi abita in cittï¿½.
+Dato che stendere nuovi cavi in cittï¿½ comporta dei lavori di
 costo molto elevato (ottenere licenze, spaccare strade, stendere
 cavi, chiudere strade, etc.), in pratica tutti gli operatori, tranne
 Fastweb, si limitano a noleggiare i cavi esistenti da Telecom.
@@ -53,35 +53,35 @@ Telecom sa di agire in regime di monopolio e fa i prezzi che vuole, a
 tutto svantaggio del mercato.</p>
 <p style="margin-bottom: 0cm;"><br>
 </p>
-<p style="margin-bottom: 0cm;">Una prima soluzione a questo problema è
+<p style="margin-bottom: 0cm;">Una prima soluzione a questo problema ï¿½
 stato l'uso di sistemi <a href="http://it.wikipedia.org/wiki/Wi-fi">Wi-Fi</a>.
-Con questa tecnologia sono già state collegate ad Internet
-intere città, come San Francisco e Bologna, ed intere vallate,
+Con questa tecnologia sono giï¿½ state collegate ad Internet
+intere cittï¿½, come San Francisco e Bologna, ed intere vallate,
 anche in Italia. Il Wi-Fi, tuttavia, soffre di alcune limitazioni
-tecniche che ne impediscono l'uso su distanze “geografiche”
+tecniche che ne impediscono l'uso su distanze ï¿½geograficheï¿½
 (diciamo, oltre il chilometro di distanza, per intenderci) e con
-bacini di utenza di dimensioni “metropolitane” (una
-piccola città od un grosso paese).</p>
+bacini di utenza di dimensioni ï¿½metropolitaneï¿½ (una
+piccola cittï¿½ od un grosso paese).</p>
 <p style="margin-bottom: 0cm;"><br>
 </p>
 <p style="margin-bottom: 0cm;">L'evoluzione del Wi-Fi nella direzione
-delle applicazioni “geografiche” e “metropolitane”
- è un nuovo standard noto come <a href="http://it.wikipedia.org/wiki/WiMAX">Wi-MAX</a>.
+delle applicazioni ï¿½geograficheï¿½ e ï¿½metropolitaneï¿½
+ ï¿½ un nuovo standard noto come <a href="http://it.wikipedia.org/wiki/WiMAX">Wi-MAX</a>.
 Questo standard permette di coprire una intera vallata alpina con un
 singolo ripetitore e di accontentare tutti i suoi abitanti.</p>
 <p style="margin-bottom: 0cm;"><br>
 </p>
 <p style="margin-bottom: 0cm;">Sfortunatamente, le frequenze usate da
-Wi-MAX sono di proprietà dell'esercito e solo a Dicembre 2006
-si è raggiunto un <a href="http://difesa.it/Sala+Stampa/comunicati-stampa-ministro-difesa-dettaglio.htm?DetailiD=1578">accordo</a> per liberalizzarle. Ora si pensa di
+Wi-MAX sono di proprietï¿½ dell'esercito e solo a Dicembre 2006
+si ï¿½ raggiunto un <a href="http://difesa.it/Sala+Stampa/comunicati-stampa-ministro-difesa-dettaglio.htm?DetailiD=1578">accordo</a> per liberalizzarle. Ora si pensa di
 assegnarle agli operatori commerciali con delle aste pubbliche molto
 simili a quelle usate per assegnare le frequenze dell'UMTS.</p>
 <p style="margin-bottom: 0cm;"><br>
 </p>
-<p style="margin-bottom: 0cm;"><b>Perchè le aste sono una idea
+<p style="margin-bottom: 0cm;"><b>Perchï¿½ le aste sono una idea
 sbagliata?</b></p>
 <p style="margin-bottom: 0cm;">Il caso dell'UMTS ha reso evidente il
-motivo per cui mettere all'asta le frequenze è una pessima
+motivo per cui mettere all'asta le frequenze ï¿½ una pessima
 idea: gli alti costi dell'asta devono poi essere scaricati
 sull'utente finale e, di conseguenza, trasformano in un prodotto di
 lusso, accessibile a pochi privilegiati, quella che avrebbe dovuto
@@ -92,15 +92,15 @@ connessione ed a favorire i meno abbienti.</p>
 <p style="margin-bottom: 0cm;">Non solo, questa situazione esclude dal
 mercato i piccoli operatori e, di conseguenza, rinforza ulteriormente
 la posizione di mercato ed i privilegi delle grandi aziende del
-settore.<a href="http://www.aiip.it/page.php?id=498&amp;aiip=72232465378a817d4cea225309e7a0e1">(Associazione Italiana Internet Providers)</a>.
+settore.<a href="http://www.aiip.it/page.html?id=498&amp;aiip=72232465378a817d4cea225309e7a0e1">(Associazione Italiana Internet Providers)</a>.
 </p>
 <p style="margin-bottom: 0cm;"><br>
 </p>
 <p style="margin-bottom: 0cm;"><b>Il fardello storico dell'UMTS</b></p>
 <p style="margin-bottom: 0cm;">Nonostante il fatto che le aste siano
-una idea palesemente sbagliata, è molto probabile che venga
+una idea palesemente sbagliata, ï¿½ molto probabile che venga
 intrapresa ugualmente questa strada per assegnare le frequenze del
-Wi-MAX. Il motivo è ovvio: se si liberalizzasse l'accesso alle
+Wi-MAX. Il motivo ï¿½ ovvio: se si liberalizzasse l'accesso alle
 frequenze del Wi-MAX, chiunque, con pochi soldi, potrebbe fare
 concorrenza alle grandi aziende che operano nel settore della
 telefonia e che usano lo standard <a href="http://it.wikipedia.org/wiki/UMTS">UMTS</a>.
@@ -109,24 +109,24 @@ quelle frequenze e non vogliono certo vedersi rubare il mercato dai
 primi arrivati.</p>
 <p style="margin-bottom: 0cm;"><br>
 </p>
-<p style="margin-bottom: 0cm;">A questo punto, è chiaro che gli
+<p style="margin-bottom: 0cm;">A questo punto, ï¿½ chiaro che gli
 interessi di queste aziende sono palesemente in contrasto con gli
-interessi della comunità e dei consumatori.  Di conseguenza, è
+interessi della comunitï¿½ e dei consumatori.  Di conseguenza, ï¿½
 necessario far sentire la propria voce per impedire che, ancora una
-volta, sia il più debole a dover soccombere.</p>
+volta, sia il piï¿½ debole a dover soccombere.</p>
 <p style="margin-bottom: 0cm;"><br>
 </p>
 <p style="margin-bottom: 0cm;"><b>Una modesta proposta</b></p>
 <p style="margin-bottom: 0cm;">Una soluzione corretta ed intelligente
-al problema delle assegnazione delle frequenze esiste da tempo ed è
-già usata nella vita quotidiana: è la stessa soluzione
+al problema delle assegnazione delle frequenze esiste da tempo ed ï¿½
+giï¿½ usata nella vita quotidiana: ï¿½ la stessa soluzione
 legale usata per evitare la proliferazione delle antenne paraboliche
 sui tetti dei condomini.</p>
 <p style="margin-bottom: 0cm;"><br>
 </p>
 <p style="margin-bottom: 0cm;">Come probabilmente saprete, la legge
 prevede che non si possa (non si potrebbe...) installare liberamente
-una antenna parabolica sul tetto del palazzo se già esiste un
+una antenna parabolica sul tetto del palazzo se giï¿½ esiste un
 impianto analogo. La legge prevede che il secondo arrivato abbia il
 diritto a collegarsi all'antenna esistente a patto che non crei
 problemi al proprietario e che gli versi una parte della cifra spesa
@@ -139,30 +139,30 @@ questa soluzione funziona nel modo seguente.</p>
 <ol>
 	<li><p style="margin-bottom: 0cm;">Il primo operatore che vuole
 	coprire una certa area installa a sue spese l'antenna ed i
-	ripetitori. Questi ripetitori usano una o più frequenze,
+	ripetitori. Questi ripetitori usano una o piï¿½ frequenze,
 	scelte tra quelle disponibili.</p>
 	</li><li><p style="margin-bottom: 0cm;">Chi arriva per secondo, ha il
 	diritto (previsto per legge) di usare la stessa antenna, gli stessi
 	ripetitori e le stesse frequenze per offrire lo stesso servizio ai
-	suoi utenti. Ovviamente, è tenuto a pagare il 50% dei costi
+	suoi utenti. Ovviamente, ï¿½ tenuto a pagare il 50% dei costi
 	dell'antenna e dei ripetitori a chi l'ha installata. Il secondo
-	arrivato è anche tenuto a non creare problemi a chi ha
+	arrivato ï¿½ anche tenuto a non creare problemi a chi ha
 	installato l'antenna ed i ripetitori. Di conseguenza, se il traffico
-	che produce è tale da creare problemi, deve installare altri
+	che produce ï¿½ tale da creare problemi, deve installare altri
 	ripetitori a sue spese.</p>
 </li></ol>
 <p style="margin-bottom: 0cm;"><br>
 </p>
-<p style="margin-bottom: 0cm;">In questo modo è possibile
+<p style="margin-bottom: 0cm;">In questo modo ï¿½ possibile
 servire una certa zona con una sola antenna che viene usata e
-condivisa da più operatori, massimizzando lo sfruttamento
+condivisa da piï¿½ operatori, massimizzando lo sfruttamento
 delle frequenze e degli impianti, senza ricorrere a meccanismi di
-assegnazione di tipo economico (aste) che favorirebbero i più
+assegnazione di tipo economico (aste) che favorirebbero i piï¿½
 forti.</p>
 <p style="margin-bottom: 0cm;"><br>
 </p>
 <p style="margin-bottom: 0cm;">La suddivisione del traffico tra i
-diversi operatori può avvenire a valle dell'antenna, sulla
+diversi operatori puï¿½ avvenire a valle dell'antenna, sulla
 rete digitale, esattamente come avviene da tempo per la condivisione
 dello stesso cavo in rame tra i diversi operatori della telefonia.</p>
 <p style="margin-bottom: 0cm;"><br>
@@ -171,12 +171,12 @@ dello stesso cavo in rame tra i diversi operatori della telefonia.</p>
 <p style="margin-bottom: 0cm;">Informatevi su questi temi. Maturate
 una vostra opinione. Diffondete le informazioni che avete raccolto e
 le opinioni che avete maturato. Solo la presenza di milioni di
-testimoni come voi, attenti e tecnicamente competenti, può
+testimoni come voi, attenti e tecnicamente competenti, puï¿½
 costringere i nostri politici a rendere conto del loro operato e, di
-conseguenza, ad agire veramente nell'interesse della comunità
-e dei singoli cittadini/consumatori. Solo in questo modo si può
+conseguenza, ad agire veramente nell'interesse della comunitï¿½
+e dei singoli cittadini/consumatori. Solo in questo modo si puï¿½
 evitare che vengano ulteriormente rafforzati i privilegi degli
-oligopolisti già esistenti.</p>
+oligopolisti giï¿½ esistenti.</p>
 <p style="margin-bottom: 0cm;"><br>
 </p>
 <p style="margin-bottom: 0cm;">Se potete, aiutateci in questo <a href="http://it.wikipedia.org/wiki/Googlebombing">Google
@@ -185,26 +185,26 @@ o di altre tecnologie affini ed inserite da qualche parte un link
 HTML come questo:</p>
 <p style="margin-bottom: 0cm;"><br>
 </p>
-<pre style="margin-bottom: 0.5cm;">&lt;a href=”<a href="http://www.partito-pirata.it/?q=node/49">http://www.partito-pirata.it/?q=node/49</a>”&gt;Wi-MAX&lt;/a&gt;</pre><p style="margin-bottom: 0cm;">
+<pre style="margin-bottom: 0.5cm;">&lt;a href=ï¿½<a href="http://www.partito-pirata.it/?q=node/49">http://www.partito-pirata.it/?q=node/49</a>ï¿½&gt;Wi-MAX&lt;/a&gt;</pre><p style="margin-bottom: 0cm;">
 Oppure come questo (che linka la sola pagina, non il sito del Partito
 Pirata):</p>
 <p style="margin-bottom: 0cm;"><br>
 </p>
 <pre style="margin-bottom: 0.5cm;">&lt;a href=<a href="http://www.partito-pirata.it/liberate_il_WIMAX.html">"http://www.partito-pirata.it/liberate_il_WIMAX.html"</a>&gt;Wi-MAX&lt;/a&gt;</pre><p style="margin-bottom: 0cm;">
-Se il numero di link di questo tipo sarà abbastanza alto,
-chiunque cercherà il termine Wi-MAX su Google nei prossimi
-mesi finirà per inciampare in questa pagina e sarà
+Se il numero di link di questo tipo sarï¿½ abbastanza alto,
+chiunque cercherï¿½ il termine Wi-MAX su Google nei prossimi
+mesi finirï¿½ per inciampare in questa pagina e sarï¿½
 quasi costretto a conoscere le nostre opinioni su questo delicato
-tema. La nostra speranza è che leggano questo documento anche
+tema. La nostra speranza ï¿½ che leggano questo documento anche
 le persone che dovranno prendere decisioni in merito (politici e loro
-consulenti) e chi dovrà presentarle al pubblico (giornalisti).</p>
+consulenti) e chi dovrï¿½ presentarle al pubblico (giornalisti).</p>
 <p style="margin-bottom: 0cm;"><br>
 </p>
-<p style="margin-bottom: 0cm;">Per qualunque necessità, potete
+<p style="margin-bottom: 0cm;">Per qualunque necessitï¿½, potete
 contattarci attraverso la nostra mailing list:</p>
 <p style="margin-bottom: 0cm;"><br>
 </p>
-<p style="margin-bottom: 0cm;"><a href="http://www.piratpartiet.it/iscrizione.php">http://www.piratpartiet.it/iscrizione.php</a>
+<p style="margin-bottom: 0cm;"><a href="http://www.piratpartiet.it/iscrizione.html">http://www.piratpartiet.it/iscrizione.html</a>
 </p>
 <p style="margin-bottom: 0cm;"><br>
 </p>
