--- a/portscanner.it.html
+++ b/portscanner.it.html
@@ -66,7 +66,7 @@ urchinTracker();
 
 		<span style="color: #0221BD">
 		Supporta il progetto Turtle Firewall:
-		
+
 		</span>
 		<br>
 
@@ -74,7 +74,7 @@ urchinTracker();
 		</form>
 		-->
 		<!-- FINE Donattion PayPal -->
-		
+
 		<? include('textLinkAds.html'); ?>
 
 		<br/>
@@ -126,11 +126,13 @@ google_color_text = "FFFFFF";
 			<br/><br/>
 
 
-<?php include("portscan.html"); ?>
+<p>
+  Coming Soon!
+</p>
 
 
 	</td>
-	
+
 	<td valign="top" width="120">
 	<br><br><br><br><br><br>
 <script type="text/javascript"><!--
@@ -150,8 +152,8 @@ google_color_text = "FFFFFF";
   src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 	</td>
-	
-	
+
+
 	</tr></table>
 
 	<br/><br/><br/><br/>
@@ -162,10 +164,10 @@ google_color_text = "FFFFFF";
 		<b>Copyright (c) 2001-2004 Frisoft di Frigido Andrea - P.IVA 03142480247 (<a href="http://www.frisoft.it">www.frisoft.it</a>)</b>
 		<br/>
 		Traduzione dall'italiano all'inglese a cura di Emanuele Tatti.
-		
+
 		<br/>
 		<br/>
-		<a href="http://sourceforge.net/projects/turtlefirewall/"><img src="http://sourceforge.net/sflogo.html?group_id=49697" alt="SourceForge Logo"/></a>
+		<a href="http://sourceforge.net/projects/turtlefirewall/"><img src="http://sourceforge.net/sflogo.php?group_id=49697" alt="SourceForge Logo"/></a>
 
 		</td></tr>
 	</table>
@@ -174,5 +176,3 @@ google_color_text = "FFFFFF";
 
   </body>
 </html>
-
-
