--- a/protectedbyturtlefirewall.it.html
+++ b/protectedbyturtlefirewall.it.html
@@ -197,7 +197,7 @@ google_color_text = "FFFFFF";
 		
 		<br/>
 		<br/>
-		<a href="http://sourceforge.net/projects/turtlefirewall/"><img src="http://sourceforge.net/sflogo.html?group_id=49697" alt="SourceForge Logo"/></a>
+		<a href="http://sourceforge.net/projects/turtlefirewall/"><img src="http://sourceforge.net/sflogo.php?group_id=49697" alt="SourceForge Logo"/></a>
 
 		</td></tr>
 	</table>
