--- a/portscanner.en.html
+++ b/portscanner.en.html
@@ -65,7 +65,7 @@ urchinTracker();
 		<input type="hidden" name="tax" value="0">
 
 		<span style="color: #0221BD">
-		
+
 		Support Turtle Firewall project:
 		</span>
 		<br>
@@ -74,7 +74,7 @@ urchinTracker();
 		</form>
 		-->
 		<!-- FINE Donattion PayPal -->
-		
+
 		<? include('textLinkAds.html'); ?>
 
 		<br/>
@@ -126,11 +126,14 @@ google_color_text = "FFFFFF";
 			<br/><br/>
 
 
-<?php include("portscan.html"); ?>
+      <p>
+        Coming Soon!
+      </p>
+
 
 
 	</td>
-	
+
 	<td valign="top" width="120">
 	<br><br><br><br><br><br>
 <script type="text/javascript"><!--
@@ -150,8 +153,8 @@ google_color_text = "FFFFFF";
   src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 	</td>
-	
-	
+
+
 	</tr></table>
 
 	<br/><br/><br/><br/>
@@ -161,7 +164,7 @@ google_color_text = "FFFFFF";
 		<br/>
 		<b>Copyright (c) 2001-2004 Frisoft di Frigido Andrea - P.IVA 03142480247 (<a href="http://www.frisoft.it">www.frisoft.it</a>)</b>
 		<br/>
-		
+
 		Italian to English translation by Emanuele Tatti.
 		<br/>
 		<br/>
@@ -174,5 +177,3 @@ google_color_text = "FFFFFF";
 
   </body>
 </html>
-
-
